Bug 1787062 - Unify how <input> and <textarea> get initialized a bit. r=masayuki,smaug

Make the anonymous content creation synchronously so that we don't need
to update layout after-the-fact, and make editor creation lazy like we
do for <input>.

I think we should try to remove the trailing <br> for <textarea> after
this (just so that editor doesn't insert it). But this is green on try
and fixes the issue so worth landing incrementally.

Differential Revision: https://phabricator.services.mozilla.com/D267252